⚓ fixed top bar alignment

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -97,6 +97,10 @@ body {
     }
 }
 
+header > [role="bottom-part"] {
+    padding-block: 5px;
+}
+
 #row-adder {
     display: none;
 }
